# klipper-touch

./: .dockerignore  .env  .env.production  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  Dockerfile  Dockerfile.dev  README.md  docker-compose.override.yml  docker-compose.yml  eslint.config.ts  index.html  moonraker-requests.http  package-lock.json  package.json  prettier.config.js  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: output-test.yml  prerelease-latest-32bit.yml  prerelease-latest.yml  publish.yml  rpi.yml  test-on-pr.yml  testuploadartifact.yml  testworkflow-rpi.yml  testworkflow.yml
docs/: UseCases and Dependencies.drawio
scripts/: install-klipper-touch.sh
src/: App.svelte  app.css  app.d.ts  app.html  env.d.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: BottomNavigation.svelte  Calibrate.svelte  HeaterBed.ts  JsonRpcClient.ts  KlipperState.ts  MessageBar.svelte  MoonrakerConnect.ts  MoonrakerRpcClient.ts  Movement.svelte  NavBar.svelte  Printerstate.svelte  StatusBar.svelte  StatusLine.svelte  base.svelte  moonrakerws.ts  state.ts
src/lib/commons/: BootParams.ts  Commands.ts  Values.ts
src/lib/fontawesome-free-6.3.0-web/css/: all.css  all.min.css  brands.css  brands.min.css  fontawesome.css  fontawesome.min.css  regular.css  regular.min.css  solid.css  svg-with-js.css  svg-with-js.min.css  v4-font-face.css  v4-font-face.min.css  v4-shims.css  v4-shims.min.css  v5-font-face.css  v5-font-face.min.css
src/lib/fontawesome-free-6.3.0-web/js/: all.js  all.min.js  brands.js  brands.min.js  conflict-detection.js  conflict-detection.min.js  (+8 more)
src/lib/jsonrpc/: JsonRpcClient.ts
src/lib/moonraker/: MoonrakerClient.ts
src/lib/moonraker-types/: INotifyStatusUpdate.ts  IPrinterObjects.ts  TPrintState.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/babysteps/: +page.svelte
src/routes/calibration/: +page.svelte
src/routes/control/: +page.svelte
src/routes/disconnected/: +page.svelte
src/routes/extrude/: +page.svelte
src/routes/extruder/: +page.svelte
src/routes/extrusion/: +page.svelte
src/routes/files/: +page.svelte
src/routes/heatbed/: +page.svelte
src/routes/heaterbed/: +page.svelte
src/routes/kinematics/: +page.svelte
src/routes/maschine/: +page.svelte
src/routes/move/: +page.svelte
src/routes/parameter/: +page.svelte
src/routes/print/: +page.svelte
src/routes/printerstatus/: +page.svelte
src/routes/printstate/: +page.svelte
src/routes/progress/: +page.svelte
src/routes/temp_bed/: +page.svelte
src/routes/temp_nozzle/: +page.svelte
src/routes/temperature/: +page.svelte
src/routes/test/: +page.svelte
src/routes/test2/: +page.svelte
src/routes/toolhead/: +page.svelte
src/routes/zoffset/: +page.svelte
(+57 files in other folders)
