[package]
name = "klipper-touch"
version = "0.1.0"
description = "A ui for small touch screens - made for klipper"
authors = ["Frank Roth <developer@freakydu.de>"]
license = "Copyright by Frank Roth <developer@freakydu.de>, 2024"
repository = "https://github.com/freakydude/klipper-touch"
default-run = "klipper-touch"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# tauri = { version = "1.5.0", features = ["window-set-fullscreen", "cli"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2"
